<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.crawlicious</groupId>
  <artifactId>filesystem</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>filesystem</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

<!--   <dependencies> -->
<!--     <dependency> -->
<!--       <groupId>junit</groupId> -->
<!--       <artifactId>junit</artifactId> -->
<!--       <version>3.8.1</version> -->
<!--       <scope>test</scope> -->
<!--     </dependency> -->
<!--   </dependencies> -->

 <dependencies>
   <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
     <version>4.0</version>
     <scope>test</scope>
   </dependency>
 </dependencies>
 
 <build>
   <plugins>
     <plugin>
       <artifactId>maven-compiler-plugin</artifactId>
       <configuration>
         <source>1.5</source>
         <target>1.5</target>
       </configuration>
     </plugin>
     <plugin>
       <groupId>net.unto.maven.plugins</groupId>
       <artifactId>maven-junit4-plugin</artifactId>
       <version>1.0-SNAPSHOT</version>
       <executions>
         <execution>
           <phase>test</phase>
           <goals>
             <goal>test</goal>
           </goals>
         </execution>
       </executions>
     </plugin>
     
<!--      <plugin> -->
<!--         <groupId>com.crawlicious.filesystem</groupId> -->
<!--         <artifactId>exec-maven-plugin</artifactId> -->
<!--         <configuration> -->
<!--           <executable>java</executable> -->
<!--           <arguments> -->
<!--             <argument>-Xms512m</argument> -->
<!--             <argument>-Xmx512m</argument> -->
<!--             <argument>-XX:NewRatio=3</argument> -->
<!--             <argument>-XX:+PrintGCTimeStamps</argument> -->
<!--             <argument>-XX:+PrintGCDetails</argument> -->
<!--             <argument>-Xloggc:gc.log</argument> -->
<!--             <argument>-classpath</argument> -->
<!--             <classpath/> -->
<!--             <argument>com.crawlicious.filesystem.cli.Main</argument> -->
<!--           </arguments> -->
<!--         </configuration> -->
<!--       </plugin> -->
      
      <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
                <archive>
                    <manifest>
                        <mainClass>com.crawlicious.filesystem.cli.Main</mainClass>
                    </manifest>
                </archive>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
            </configuration>
        </plugin>
      
   </plugins>
 </build>
 
 <pluginRepositories>
   <pluginRepository>
     <id>unto.net</id>
     <url>http://repository.unto.net/maven/</url>
     <releases>
       <updatePolicy>daily</updatePolicy>
       <checksumPolicy>warn</checksumPolicy>
     </releases>
     <snapshots>
       <updatePolicy>daily</updatePolicy>
       <checksumPolicy>warn</checksumPolicy>
     </snapshots>
   </pluginRepository>
 </pluginRepositories>




</project>
